--- a/Rules
+++ b/Rules
@@ -2,11 +2,11 @@
 
 L'odyssée des dés : ALPHA et OMEGA
 
-Deux dés légendaires, ALPHA et OMEGA, se lancent dans une aventure épique pour échapper à la destruction imminente provoquée par une météorite. Leur seul espoir réside dans le pouvoir du hasard et la force de leurs lancers.
+Deux dés légendaires, ALPHA et OMEGA, se lancent dans une aventure épique pour échapper à la destruction imminente provoquée par une météorite. Leur seul espoir réside dans le pouvoir du hasard.
 
 But du jeu:
 
-Atteindre 30 points avant que la météorite ne les rattrape, mais il ne peut y avoir qu'un gagnant.
+Atteindre 30 points avant que la météorite ne les rattrape, mais il ne peut y avoir qu'un seul gagnant.
 
 Règles de chaque face du dé:
 
